# 3dsmc-bundle-adjustment

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  three_frames_teddy_depths.txt
Data/: data_notes  download_dataset.sh  freiburg1_xyz_sample_five_frames.txt  freiburg1_xyz_sample_five_frames_outlier.txt  freiburg1_xyz_sample_two_frames.txt  freiburg3_intrinsics.txt  ros_default_intrinsics.txt  three_frames_teddy.txt  three_frames_teddy_depths.txt  two_frames_teddy.txt
headers/: BundleAdjustmentConfig.h  CommonTypes.h  Detection.h  Map3D.h  Matching.h  OptimizationUtils.h  VirtualSensor.h  helpers.h
lib/: installEigen.sh  installOCV.sh  installOGV.sh  install_pangolin.sh
manual_match_finder/: find_corr.m  load_sequence.m  main.m  process_gt.m
matlab_correspondences_finder/: check_file.m  find_corr.m  load_sequence.m  main.m  process_gt.m
notes/: optimization_sample_notes.txt  optimization_sample_output.txt
output/ablation_losses/: L2.txt  base.txt  freiburg1_xyz_poses_L2.txt  freiburg1_xyz_poses_highhub.txt  highhub.txt
output/ablation_opt_while_tracking/: base.txt  freiburg1_xyz_poses_trackbefore.txt  trackbefore.txt
output/ablation_weights/: base.txt  freiburg1_xyz_poses_base.txt  freiburg1_xyz_poses_highunpr.txt  freiburg1_xyz_poses_nointr.txt  freiburg1_xyz_poses_nounpr.txt  highunpr.txt  nointr.txt  nounpr.txt
output/base_case_optimization/: new_base.txt
output/new_ablation/nopt_ORB/: freiburg1_xyz_metrics.txt  freiburg1_xyz_poses.txt
output/new_ablation/nopt_SIFT/: freiburg1_xyz_metrics.txt  freiburg1_xyz_poses.txt
output/new_ablation/nopt_SURF/: freiburg1_xyz_metrics.txt  freiburg1_xyz_poses.txt
output/rpy_synthetic/: configuration.txt  results_chd.txt  results_ours.txt  results_snavely.txt
output/runs/: freiburg1_desk_metrics.txt  freiburg1_desk_poses.txt  freiburg1_room_metrics.txt  freiburg1_room_poses.txt  freiburg1_rpy_metrics.txt  freiburg1_rpy_poses.txt  freiburg1_xyz_metrics.txt  freiburg1_xyz_poses.txt  freiburg2_desk_metrics.txt  freiburg2_desk_poses.txt  freiburg2_pioneer_360_metrics.txt  freiburg2_pioneer_360_poses.txt  freiburg2_xyz_metrics.txt  freiburg2_xyz_poses.txt
rgb-d-toolset/: add_pointclouds_to_bagfile.py  associate.py  evaluate_ate.py  generate_registered_pointcloud.py  instructions  plot_trajectory_into_image.py
src/: CMakeLists.txt  Detection.cpp  FreeImageHelper.cpp  Map3D.cpp  Matching.cpp  OptimizationSample.cpp  OptimizationUtils.cpp  main.cpp  nearest_interp_1d.cpp
test/: Exercise5LibsIncludeTest.cpp  SurfFlannMatchingTest.cpp  main.cpp
